<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/content_template" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_top" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listTransactions"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            />

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
