<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/content_template" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_top" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listChart"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGoToPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_payment"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/primary"
            android:background="@color/gray"
            android:layout_weight="0"
            app:backgroundTint="@color/accent_bright"/>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
